# The-Duck-Council

./: CHANGELOG.md  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  requirements.txt
client/: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  dockerfile  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml
client/public/: robots.txt  sitemap.xml
client/src/: index.css  main.tsx
client/src/components/shared/: accordion.tsx  textarea.tsx
client/src/components/ui/: accordion.tsx  button.tsx
client/src/configs/: index.ts
client/src/configs/http/: interceptor.ts  method.ts
client/src/lib/: contants.ts
client/src/routes/: __root.tsx  index.tsx
client/src/service/: global.ts
client/src/service/core/: index.ts
client/src/styles/: chat.module.css
client/src/types/: global.d.ts  response.d.ts
duck_council/: .env.example  app.py  config.py  constants.py  dockerfile  helpers.py  request_validations.py  requirements.txt
duck_council/knowledge/: user_preference.txt
duck_council/src/: __init__.py
duck_council/src/duck_council/: api.py  crew.py  main.py  pyproject.toml
duck_council/src/duck_council/config/: agents.yaml  duck_data.py  duck_names.py  tasks.yaml
duck_council/templates/: home.html
src/: index.css  routeTree.gen.ts
src/components/module/chat/: index.tsx  input.tsx
src/components/shared/: textarea.tsx
src/routes/: __root.tsx  index.tsx
src/routes/_chat/: chat.tsx
src/routes/_public/: help.tsx  layout.tsx
src/styles/: chat.module.css
src/types/: global.d.ts
(+4 files in other folders)
