[project]
name = "duck_council"
version = "0.1.0"
description = "duck_council using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
duck_council = "duck_council.main:run"
run_crew = "duck_council.main:run"
train = "duck_council.main:train"
replay = "duck_council.main:replay"
test = "duck_council.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
